fix(ui): prevent layout shift on modal open and add hide play button for guests

--- a/frontend/src/entities/album/ui/AlbumCard/AlbumCard.module.css
+++ b/frontend/src/entities/album/ui/AlbumCard/AlbumCard.module.css
@@ -2,8 +2,6 @@
   width: 590px;
   display: flex;
   flex-direction: row;
-  background: var(--red-900);
-  border-radius: 0 var(--border-radius-lg) var(--border-radius-lg) 0;
   border: 1px solid var(--grey-900);
 }
 
