--- a/frontend/src/entities/album/ui/AlbumInfo/AlbumInfo.module.css
+++ b/frontend/src/entities/album/ui/AlbumInfo/AlbumInfo.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   row-gap: var(--space-md);
   text-align: center;
+  color: var(--grey-900);
 }
 
 .album_info_name {
