--- a/frontend/src/shared/ui/Backdrop/Backdrop.module.css
+++ b/frontend/src/shared/ui/Backdrop/Backdrop.module.css
@@ -6,6 +6,8 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
 
 .backdrop-visible {
